Fix crossbrowser flexbox issues, add form labels nowrap behavior

--- a/sass/blocks/_stock-accordion.sass
+++ b/sass/blocks/_stock-accordion.sass
@@ -217,6 +217,7 @@ $block: ".stock-accordion"
 
   // $Accordion text
   &__text
+    max-width: 100%
     font-family: $f-sans
     font-size: 12px
     line-height: 1
