--- a/sass/blocks/_stock-form-field.sass
+++ b/sass/blocks/_stock-form-field.sass
@@ -106,6 +106,9 @@ $block: ".stock-form-field"
     &_size_small
       font-size: 12px
 
+    &_nowrap
+      white-space: nowrap
+
 
   // $Common form field label text
   &__label-text
