--- a/sass/blocks/_stock-page-content.sass
+++ b/sass/blocks/_stock-page-content.sass
@@ -368,6 +368,7 @@ $block: ".stock-page-content"
 
   // $Page content text
   &__text
+    max-width: 100%
     font-family: $f-sans
     font-size: 12px
     line-height: 1
