--- a/sass/blocks/_stock-table.sass
+++ b/sass/blocks/_stock-table.sass
@@ -570,6 +570,21 @@ $block: ".stock-table"
   &__info
     width: 100%
 
+    #{$block}_page_po-form #{$block}__cell:nth-child(4) &,
+    #{$block}_page_si-form #{$block}__cell:nth-child(4) &,
+    #{$block}_page_oh-details #{$block}__cell:nth-child(4) &,
+    #{$block}_page_p-list #{$block}__cell:nth-child(4) &,
+    #{$block}_page_ed-list #{$block}__cell:nth-child(4) &,
+    #{$block}_page_ed-form #{$block}__cell:nth-child(4) &,
+    #{$block}_page_em-form #{$block}__cell:nth-child(4) &,
+    #{$block}_page_si-form #{$block}__cell:nth-child(6) &,
+    #{$block}_page_si-form #{$block}__cell:nth-child(7) &,
+    #{$block}_page_oh-list #{$block}__cell:nth-child(7) &,
+    #{$block}_page_sr #{$block}__cell:nth-child(8) &,
+    #{$block}_page_st #{$block}__cell:nth-child(8) &,
+    #{$block}_page_po-form #{$block}__cell:nth-child(8) &
+      text-align: center
+
   // $Common table text
   &__text
     font-family: $f-sans
